static/css/home.css
* {
  margin: 0;
  padding: 0;
}
.preload * {
  -webkit-transition: none !important;
  -o-transition: none !important;
  transition: none !important;
}
nav {
  position: sticky;
  top: 0;
  left: 0;

  padding: 5px;
  width: calc(100% - 10px);

  display: -webkit-box;

  display: -ms-flexbox;

  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;

  -webkit-box-pack: center;

  -ms-flex-pack: center;

  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;

  background-color: whitesmoke;
  border-bottom: 1px solid black;
  z-index: 1;
}
main *.modal.native {
  -webkit-transition: none;
  -o-transition: none;
  transition: none;
}
*.modal > div > button,
/* #modal-edit button, */
#sidebar button,
nav button {
  background-color: transparent;
  border: none;
  border-radius: 50%;

  width: 60px;
  height: 60px;

  -webkit-transition: background-color 0.1s;

  -o-transition: background-color 0.1s;

  transition: background-color 0.1s;
}
nav input {
  width: calc(100% - 110px / 3 - 30px);
  height: 40px;

  border-radius: 10px;

  background-color: transparent;
  border: none;

  font-size: 23px;

  margin: 0 10px;

  padding: 5px;
}
nav input:focus {
  outline: none;
}
*.modal > div > button img,
#sidebar button img,
*.element-header img,
nav img {
  width: 50px;
  height: 50px;
  padding: 5px;
}
#sidebar {
  position: fixed;
  top: 0;
  left: 0;

  width: 80%;

  height: 100vh;
  background-color: whitesmoke;

  z-index: 3;

  max-width: 0;
  -webkit-transition: max-width 0.25s ease;
  -o-transition: max-width 0.25s ease;
  transition: max-width 0.25s ease;

  overflow: hidden;
}
#sidebar div:first-child {
  min-height: 45px;
}
*.modal > div:first-child,
#filtres,
#sidebar-header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
}
#sidebar div:first-child > img {
  display: none;
  width: 45px;
  height: 45px;
}
#sidebar div:first-child h1 {
  margin-left: auto;
  margin-right: auto;
}
#sidebar #filtres {
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 5px 5px 20px 5px;
  border-top: 1px solid lightsteelblue;
  border-bottom: 1px solid lightsteelblue;
  -webkit-transition: -webkit-transform 0.25s ease;
  transition: -webkit-transform 0.25s ease;
  -o-transition: transform 0.25s ease;
  transition: transform 0.25s ease;
  transition: transform 0.25s ease, -webkit-transform 0.25s ease;
  -webkit-transform: translateX(-400px);
  -ms-transform: translateX(-400px);
  transform: translateX(-400px);
}
#sidebar *.filtre {
  width: auto;
  min-width: 64px;
  height: 36px;
  background-color: lightsteelblue;
  border-radius: 25px;
  padding: 10px;
  margin: 3px;

  font-family: "Roboto", sans-serif;

  -webkit-transition: background-color 0.25s ease, text-shadow 0.35s ease;

  -o-transition: background-color 0.25s ease, text-shadow 0.35s ease;

  transition: background-color 0.25s ease, text-shadow 0.35s ease;
}
#sidebar *.filtre:hover {
  text-shadow: 0 0 10px steelblue;
}
#filtres *.selected {
  background-color: lightskyblue;
}
#link-box {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;

  -webkit-transition: -webkit-transform 0.25s ease;

  transition: -webkit-transform 0.25s ease;

  -o-transition: transform 0.25s ease;

  transition: transform 0.25s ease;

  transition: transform 0.25s ease, -webkit-transform 0.25s ease;
  -webkit-transform: translateX(-400px);
  -ms-transform: translateX(-400px);
  transform: translateX(-400px);
}
#link-box > button {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: calc(100% - 20px);
  margin: 10px 5px;
  padding: 5px;
  font-size: 15px;
  border-radius: 10px;
  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
    0 1px 2px rgba(0, 0, 0, 0.24);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);

  -webkit-transition: background-color 0.25s ease, -webkit-transform 0.25s ease;

  transition: background-color 0.25s ease, -webkit-transform 0.25s ease;

  -o-transition: transform 0.25s ease, background-color 0.25s ease;

  transition: transform 0.25s ease, background-color 0.25s ease;

  transition: transform 0.25s ease, background-color 0.25s ease,
    -webkit-transform 0.25s ease;
}
#link-box > button:hover {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
  background-color: rgba(176, 196, 222, 0.3);
}
#link-box > button img {
  width: 40px;
  height: 40px;
  margin: 0 10px 0 0;
}
/* #settings {
  position: absolute;
  bottom: 0;
  left: 0;
} */
#contents {
  padding: 30px;
  width: calc(100% - 60px);
}
*.content {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;

  padding: 3px 6px;
  margin: 4px -6px;
  font-size: 16px;
  line-height: 24px;

  background: transparent;
  border: none;

  font-family: "Poppins", sans-serif;

  width: 100%;
  border-radius: 5px;

  position: relative;
}
*.content:hover {
  background-color: #f7f5f2;
}
*.content label {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  text-align: start;
}
*.content > div {
  display: none;
}
@media screen and (min-width: 700px) {
  *.content > div {
    display: flex;
    position: absolute;
    top: 25px;
    left: 0;
    width: calc(100% - 20px);
    background-color: #f7f5f2;
    border-radius: 0px 0px 15px 15px;
    z-index: 1;

    align-items: center;
    text-align: left;
    font-size: 14px;
    line-height: 14px;

    overflow: hidden;
    opacity: 0;
    transform: translateY(-10px);
    pointer-events: none;
    transition: all 0.3s ease-in-out;
  }
  *.content[data-position="bottom"] > div {
    top: auto;
    bottom: 25px;
    border-radius: 15px 15px 0px 0px;
  }
  *.content > div > div > img {
    padding: 5px;
    border-radius: 15px;
  }
  *.content > label:hover ~ div {
    opacity: 1;
    transform: translateY(0);
    pointer-events: auto;
    padding: 10px;
  }
}
del {
  text-decoration-thickness: 0.1rem;
}
*.content *.checked {
  text-decoration: line-through;
  text-decoration-thickness: 0.1rem;
}
*.content input {
  margin: 3px 6px 3px 3px;
  min-width: 18px;
  height: 18px;
}
main {
  position: relative;
  width: 100%;
  -webkit-transition: 0.25s;
  -o-transition: 0.25s;
  transition: 0.25s;
}
@media screen and (min-width: 1200px) {
  #sidebar {
    z-index: 2;
    max-width: 400px;
    border-right: 1px solid black;
  }
  main {
    width: calc(100% - 400px);
    margin-left: 400px;
  }
  #sidebar #filtres {
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    min-width: 400px;
  }
  #sidebar #link-box {
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    min-width: 400px;
  }
  #close-btn {
    display: none;
  }
}
*.modal {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

#add-btn {
  position: fixed;
  bottom: 10px;
  right: 10px;
  background-color: whitesmoke;
  border-radius: 25px;

  width: 50px;
  height: 50px;

  border: 1px solid black;

  display: -webkit-box;

  display: -ms-flexbox;

  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;

  -webkit-transition: background-color 0.1s;

  -o-transition: background-color 0.1s;

  transition: background-color 0.1s;
}
#add-btn img {
  width: 40px;
  height: 40px;
}
#add-btn p {
  display: none;
  font-size: 20px;
}
button,
a {
  cursor: pointer;
}
.loader {
  background-color: var(--main-color);
  overflow: hidden;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 100000;

  /* display: none; */
}

:root {
  --main-color: #ecf0f1;
  --point-color: #555;
  --size: 5px;
}

.loader__element {
  border-radius: 100%;
  border: var(--size) solid var(--point-color);
  margin: calc(var(--size) * 2);
}

.loader__element:nth-child(1) {
  -webkit-animation: preloader 0.6s ease-in-out alternate infinite;
  animation: preloader 0.6s ease-in-out alternate infinite;
}
.loader__element:nth-child(2) {
  -webkit-animation: preloader 0.6s ease-in-out alternate 0.2s infinite;
  animation: preloader 0.6s ease-in-out alternate 0.2s infinite;
}

.loader__element:nth-child(3) {
  -webkit-animation: preloader 0.6s ease-in-out alternate 0.4s infinite;
  animation: preloader 0.6s ease-in-out alternate 0.4s infinite;
}

@-webkit-keyframes preloader {
  100% {
    -webkit-transform: scale(2);
    transform: scale(2);
  }
}

@keyframes preloader {
  100% {
    -webkit-transform: scale(2);
    transform: scale(2);
  }
}

